<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/sensor_list_item_sensor_name"
        android:text="@string/placeholder" />

    <Button
        android:text="@string/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensor_list_item_sensor_name"
        android:layout_alignParentEnd="true"
        android:id="@+id/sensor_list_item_connect_button" />

    <Button
        android:text="@string/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sensor_list_item_connect_button"
        android:layout_toStartOf="@+id/sensor_list_item_connect_button"
        android:id="@+id/sensor_list_item_disconnect_button" />
</RelativeLayout>